# qt-quick-plugin-pattern

./: .gitignore  README.md
whs31/qt/quickpatternplugin/: CMakeLists.txt  qmldir
whs31/qt/quickpatternplugin/resources/: qqp-plugin-rc.qrc
whs31/qt/quickpatternplugin/src/: qqp.qrc
whs31/qt/quickpatternplugin/src/c++/: qqpplugin.c++  qqpplugin.h
whs31/qt/quickpatternplugin/src/qml/: Example.qml
